fixed grid alignment

--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,10 @@ h1 {
 
 .card {
   border: 1px solid black;
-  width: "260px";
   font-family: "Trebuchet MS", Arial, sans-serif;
   border-radius: 10%;
+  max-width: 320px;
+  justify-self: center;
 }
 
 .card img {
